fix: labels and spacing

--- a/blocks/donor-wall/edit/style.scss
+++ b/blocks/donor-wall/edit/style.scss
@@ -37,3 +37,8 @@
             }
         }
     }
+
+.components-form-token-field {
+    margin-top: -18px !important;
+    label { display: none !important;}
+}
